--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d out",
+    "deploy": "gh-pages -d out",
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start"
